sample/retrieveUnpackaged/objects/WSI__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Finish__c</fullName>
        <label>Actual Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Duration__c</fullName>
        <label>Expected Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Montage WSI ID (TIBCO removes spaces)</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hidden_WSI_Planned_Start_Date_counter__c</fullName>
        <label>(Hidden)WSI Planned Start Date counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Properties_Affected__c</fullName>
        <label>Number of Properties Affected</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Finish__c</fullName>
        <label>Planned Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SEW_Event__c</fullName>
        <label>SEW Event</label>
        <referenceTo>SEW_Event__c</referenceTo>
        <relationshipLabel>WSIs</relationshipLabel>
        <relationshipName>WSI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tap_on_hydrant__c</fullName>
        <label>Tap on hydrant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_trigger_field__c</fullName>
        <formula>CreatedDate -  0.03800</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time trigger field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WSI_Planned_Start_Date_counter__c</fullName>
        <formula>IF( DATEVALUE(Planned_Start__c) &gt; TODAY(), 1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WSI Planned Start Date counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSI_Source_Modified_Date__c</fullName>
        <label>WSI Source Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WSI_status__c</fullName>
        <label>WSI status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Water_state__c</fullName>
        <label>Water state</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WSI</label>
    <nameField>
        <label>WSI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>